# E18-Meter-Reader

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
bot/: database.py  keyboards.py  models.py  texts.py
bot/handlers/: __init__.py  admin.py  common.py  decorators.py  grayhound.py  tenant.py
bot/repositories/: __init__.py  apartments.py  base.py  meters.py  readings.py  roles.py  users.py
bot/services/: __init__.py  export.py  reading.py  roles.py
docs/: design.md  handoff.md  methodology.md  scope.md  todo.md  tracker.md
docs/templates/: design_template.md  scope_template.md  tracker_template.md
migrations/: V1__initial_schema.sql
scripts/: db_deploy_linux.sh  db_deploy_windows.ps1  pre-commit.ps1
tests/: test_main.py  test_pre_commit.py  test_repositories.py
